--- a/union.html
+++ b/union.html
@@ -169,15 +169,15 @@ padding:20px 0px;
 <p><font size="4">-2BR Villa for 4 persons @18000 per night.</p>
 <p><font size="4">-3BR Villa for 6 persons @30000 per night.</p>
 <p><font size="4">-EXTRA PERSON RATE @ 1400 per night.</p>
-<p><font size="4">• Rate is inclusive of Breakfast for two (2) persons per room based on Twin occupancy.</p>
-<p><font size="4">• Extra person charge is inclusive of breakfast.</p>
-<p><font size="4">• Extra mattress set-up (subject to availability), Php. 1,500.00/mattress.</p>
-<p><font size="4">• Upon check in, a cash deposit for incidentals amounting to Php 2,000/room per night (Deluxe and Suite), Php. 4,000.00/villa/night (2 br villa) and Php. 6,000.00/villa/night (3 br villa) will be required.</p>
-<p><font size="4">• Maximum Occupancy should follow using the Hotel’s policy of 4 persons per room (children are counted) in the hotel rooms.</p>
-<p><font size="4">• Maximum Occupancy should follow using the Hotel’s policy of 6 persons per room (children are counted) in the 2 BR Villas (Poro Point) (with extra person charge in excess of 4 pax).</p>
-<p><font size="4">• Maximum Occupancy should follow using the Hotel’s policy of 8 persons per room (children are counted) in the 3 BR Villas (Poro Point) (with extra person charge in excess of 6 pax).</p>
-<p><font size="4">• Children 12 years old and below are free of charge (no breakfast).</p>
-<p><font size="4">• The hotel strictly observes a “No Pets” policy. Likewise, bringing in of food and beverage into the premises is also strictly prohibited and shall impose an applicable “Corkage Fee”.</p>
+<p><font size="4">-Rate is inclusive of Breakfast for two (2) persons per room based on Twin occupancy.</p>
+<p><font size="4">-Extra person charge is inclusive of breakfast.</p>
+<p><font size="4">-Extra mattress set-up (subject to availability), Php. 1,500.00/mattress.</p>
+<p><font size="4">-Upon check in, a cash deposit for incidentals amounting to Php 2,000/room per night (Deluxe and Suite), Php. 4,000.00/villa/night (2 br villa) and Php. 6,000.00/villa/night (3 br villa) will be required.</p>
+<p><font size="4">-Maximum Occupancy should follow using the Hotel's policy of 4 persons per room (children are counted) in the hotel rooms.</p>
+<p><font size="4">-Maximum Occupancy should follow using the Hotel's policy of 6 persons per room (children are counted) in the 2 BR Villas (Poro Point) (with extra person charge in excess of 4 pax).</p>
+<p><font size="4">-Maximum Occupancy should follow using the Hotel's policy of 8 persons per room (children are counted) in the 3 BR Villas (Poro Point) (with extra person charge in excess of 6 pax).</p>
+<p><font size="4">-Children 12 years old and below are free of charge (no breakfast).</p>
+<p><font size="4">-The hotel strictly observes a "No Pets" policy. Likewise, bringing in of food and beverage into the premises is also strictly prohibited and shall impose an applicable “Corkage Fee”.</p>
 <p><font size="4">Notes: Rates are based on PEAK SEASON (March 1-June 30), (Nov 1 - Dec 14). Pls. pm for quotation on other dates.
 
 <p><h2>BINANGONAN RIZAL</p></h2>
@@ -190,13 +190,13 @@ padding:20px 0px;
 <p><font size="4">*A SURCHARGE fee for the SUPER PEAK PERIODS will be charged for the Holy Week period, Christmas Season and New Year (Dec 15-Jan 15,2019).</p>
 <p><font size="4">- Php 1,000/ night for the hotel rooms and suites
 
-<p><font size="4">• Above room rates are inclusive of 10% service charge and local taxes.</p>
-<p><font size="4">• Rate is inclusive of Breakfast for two (2) persons per room based on Twin occupancy.</p>
-<p><font size="4">• Extra person charge is inclusive of breakfast.</p>
-<p><font size="4">• Upon check in, a deposit for incidentals amounting to Php 2,000/room per night will be required.</p>
-<p><font size="4">• Maximum Occupancy should follow using the Hotel’s policy of 4 persons per room (children are counted) in the hotel rooms.</p>
-<p><font size="4">• Children 12 years old and below are free of charge (no breakfast).</p>
-<p><font size="4">• The hotel strictly observes a “No Pets” policy. Likewise, bringing in of food and beverage into the premises is also strictly prohibited and shall impose an applicable “Corkage Fee”.</p>
+<p><font size="4">-Above room rates are inclusive of 10% service charge and local taxes.</p>
+<p><font size="4">-Rate is inclusive of Breakfast for two (2) persons per room based on Twin occupancy.</p>
+<p><font size="4">-Extra person charge is inclusive of breakfast.</p>
+<p><font size="4">-Upon check in, a deposit for incidentals amounting to Php 2,000/room per night will be required.</p>
+<p><font size="4">-Maximum Occupancy should follow using the Hotel’s policy of 4 persons per room (children are counted) in the hotel rooms.</p>
+<p><font size="4">-Children 12 years old and below are free of charge (no breakfast).</p>
+<p><font size="4">-The hotel strictly observes a "No Pets" policy. Likewise, bringing in of food and beverage into the premises is also strictly prohibited and shall impose an applicable "Corkage Fee".</p>
 
 <p><h4>RATES ARE NOT VALID DURING HOLY WEEK AND LONG WEEKENDS. RATES ARE SUBJECT TO CHANGE WITHOUT PRIOR NOTICE.</p></h4>
 </ul>
