--- a/gigantes.html
+++ b/gigantes.html
@@ -162,14 +162,14 @@ padding:20px 0px;
 <br>
 <left>	
 <ul><p><h2><font style="border:2px double;">CABUGAO GAMAY ISLAND</font></p></h2>
-<img style="border:5px double black;" src="AIR/pic/gao.jpg" width=" 750px"height="500px"align="right">
+<img style="border:5px double black;" src="pic/gao.jpg" width=" 750px"height="500px"align="right">
 <p><font size="4">(Isla De Gigantes Day Tour Package @ 1,099 each Minimum of 4 pax).</p>
 <p><h2>Inclusions:</p></h2>
 <p><font size="4">-Private charter boat..</p>
 <p><font size="4">-Free unli food lunch/tour (as stated).</p>
 <p><font size="4">-All entrance fees.</p>
-<p><font size="4">-Island hopping – 6 islands to visit.</p>
-<p><font size="4">-Island hopping – 6 islands to visit.</p>
+<p><font size="4">-Island hopping â€“ 6 islands to visit.</p>
+<p><font size="4">-Island hopping â€“ 6 islands to visit.</p>
 <p><font size="4">-Tour guide fee.</p>
 <p><font size="4">-Environmental fee.</p>
 <p><font size="4">-Island entrance fees.</p>
@@ -180,21 +180,21 @@ padding:20px 0px;
 
 <p><h2>ISLANDS TO VISIT (For Day Tour):</p></h2>
 
-<p><font size="4">*9:30 to 10 am: Pulupandan Island – Swimming.</p>
+<p><font size="4">*9:30 to 10 am: Pulupandan Island â€“ Swimming.</p>
 
 <p><font size="4">*We may visit Gaket Gaket islet but it is only visible during low tide and it only shows up during Amihan season.</p>
 
-<p><font size="4">*10 to 11:30 am: Cabugao Gamay – the most photograph spot in Gigantes. Picture taking + swimming + a little bit of rock climbing.</p>
+<p><font size="4">*10 to 11:30 am: Cabugao Gamay â€“ the most photograph spot in Gigantes. Picture taking + swimming + a little bit of rock climbing.</p>
 
 <p><font size="4">*12 noon: Lunch will be served at the resort.</p>
-<p><font size="4">*Antonia beach – Snorkeling and swimming + picture taking Activities:</p>
+<p><font size="4">*Antonia beach â€“ Snorkeling and swimming + picture taking Activities:</p>
 <p><font size="4">-Banana boat ride (200 each minimum of 5 heads).</p>
 <p><font size="4">-Jetski (2000 every 30 mins).</p>
 
-<p><font size="4">*Putting Baybay Gamay – cliff diving for beginners Bantigue Sandbar (best visit during sunset).</p>
-<p><font size="4">*Tanke (Enchanted Lagoon) – swimming and cliff diving to an open sea but nothing to Worry as it is safe and fun!</p>
+<p><font size="4">*Putting Baybay Gamay â€“ cliff diving for beginners Bantigue Sandbar (best visit during sunset).</p>
+<p><font size="4">*Tanke (Enchanted Lagoon) â€“ swimming and cliff diving to an open sea but nothing to Worry as it is safe and fun!</p>
 
-<p><font size="4">*4 pm – Back to Bancal Port 4:10 pm – End of tour.</p>
+<p><font size="4">*4 pm â€“ Back to Bancal Port 4:10 pm â€“ End of tour.</p>
 
 <p><h4>NOTE: The sequence of the islands to visit may not be followed chronologically depending on the sea condition but we will manage to visit as many islands as we can.</p></h4>
 </ul>
