--- a/konghong.html
+++ b/konghong.html
@@ -163,7 +163,7 @@ padding:20px 0px;
 <left>	
 <ul><p><h2><font style="border:2px double;">HONG KONG PROMO</font></p></h2>
 <p><h2>HONG KONG FREE AND EASY @ PANDA HOTEL BUY 2 GET 1 FREE!!!</p></h2>
-<img style="border:5px double black;" src="AIR/pic/noh1.jpg" width=" 750px"height="500px"align="right">
+<img style="border:5px double black;" src="pic/noh1.jpg" width=" 750px"height="500px"align="right">
 <p><font size="4">(BOOKING PERIOD: FEBRUARY TO JUNE 2018).</p>
 <p><font size="4">(TRAVEL PERIOD: FEBRUARY TO JUNE 2018).</p>
 <p><h2>Package Inclusions:</p></h2>
