--- a/airfare.html
+++ b/airfare.html
@@ -164,7 +164,7 @@ padding:20px 0px;
 <ul><p><h2><font style="border:2px double;">AIRFARE PROMO</font></p></h2>
 <p><font size="4">Date travel: March 9-12, 2018</p>
 <p><font size="4">-PAL Manila-PPS P1,953</p>
-<img style="border:5px double black;" src="AIR/pic/den.jpg" width=" 750px"height="500px"align="right">
+<img style="border:5px double black;" src="pic/den.jpg" width=" 750px"height="500px"align="right">
 <p><font size="4">-AIRASIA PPS-Manila P1,982</p>
 <p><font size="4">Promo period:Until seat last!</p>
 
@@ -203,9 +203,9 @@ padding:20px 0px;
 <p><h2>TERMS AND CONDITIONS:</p></h2>
 <p><font size="4">*Airfare is not included in the package.</p>
 <p><font size="4">*50% Down payment is required to secure the booking.</p>
-<p><font size="4">*Remaining balance should be settled 7 days prior to client’s arrival.</p>
+<p><font size="4">*Remaining balance should be settled 7 days prior to clientâ€™s arrival.</p>
 <p><font size="4">*Down payment is not refundable.</p>
-<p><font size="4">*Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
+<p><font size="4">*Any cancellation received within 7 days prior to the arrival date will occur the first nightâ€™s charge.</p>
 <p><font size="4">*Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">*If client failed to arrive on your booking date, NO REFUND will be given.</p>
 
