--- a/konghong1.html
+++ b/konghong1.html
@@ -162,7 +162,7 @@ padding:20px 0px;
 <br>
 <left>	
 <ul><p><h2><font style="border:2px double;">3D2N HONGKONG PROMO</font></p></h2>
-<img style="border:5px double black;" src="air/pic/mar.jpg" width=" 750px"height="500px"align="right">
+<img style="border:5px double black;" src="pic/mar.jpg" width=" 750px"height="500px"align="right">
 <p><h2>BUY 2 TAKE 1 HONGKONG FREE AND EASY ALL IN!!</p></h2>
 <p><font size="4">HURRY LIMITED SEATS ONLY!!</p>
 <p><font size="4">-3D2N HONGKONG FREE AND EASY- P12,788/head.</p>
