--- a/mywebsite15.html
+++ b/mywebsite15.html
@@ -201,7 +201,7 @@ width: 70%;
 	<div class="container">
 	<a href="https://graceairfare.github.io/airfare.html"target="_blank"><img style="border:5px double black;"src="pic/den2.jpg" width=" 340px"height="300px"alt=""></a>
         <a href="https://graceairfare.github.io/konghong1.html"target="_blank"><img style="border:5px double black;"src="pic/mar1.jpg" width=" 340px"height="300px"alt=""></a>
-        <a href="https://graceairfare.github.io/mywebsite15.html"target="_blank"><img style="border:5px double black;"src="pic/pro6.jpg" width=" 340px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/cebupac.html"target="_blank"><img style="border:5px double black;"src="pic/bec.jpg" width=" 340px"height="300px"alt=""></a>
 	</div>
 	</div>
 </div>
