--- a/mywebsite15.html
+++ b/mywebsite15.html
@@ -187,7 +187,7 @@ width: 70%;
 <p style =" color: white"><marquee><h1>PROMOS & PACKAGES<h1></marquee></p>
 
 <br>
-<p><h1><font style="border:2px double;">CLICK THE IMAGE TO SEE PROMO</font></p></h1>
+<p><h1><font style="border:2px double;">CLICK THE IMAGE</font></p></h1>
 
 	
 	<div class="lotsaLinks"> 
