--- a/index.html
+++ b/index.html
@@ -1,101 +1,35 @@
-<!DOCTYPE html>
 <html>
 
 <title>gracetravel&tourservices</title>
+<center>
 <style>
-body{
-	
-	background-image:url('pic/ace.jpg');
-	background-size:cover;
-	font-family:Century gothic;
-	font-size:12px;
-	margin: 0;
-	line-height:20px;
-	
-	
-	}
-.navbar{
-	text-align:center;
-	width:100%;
-	background:brown;
-	height:40px;
-	margin-top:70px;
-	opacity:0.7;
-	border-radius:0px;
-	}
-.navbar ul{
-	margin:70px;
-	padding:0;
-	list-style:none;
-	position:relative;
-	
-	}
-.navbar ul li a{
-	display:block;
-	padding:10px;
-	color:yellow;
-	text-decoration:none;
-	width:120px;
-	
-	}
-.navbar ul:after{
-	content:""; clear:both;
-	display:block;
-	
-	}
-.navbar ul li{
-	float:left;
-	list-style:none;
-	border-radius:14px;
-	}
-.navbar ul ul{
-	display:none;
-	}
-.navbar ul li:hover>ul{
-	display:block;
-	}
-.navbar ul li:hover{
-	background:green;
-	transition:0.9s;
-	}
-.navbar ul li:hover a{
-	color:white;
-	}
-.navbar ul ul{
-	background:black;
-	padding:0;
-	margin:0;
-	position:absolute;top:90%;
-	}
-.navbar ul ul li{
-	float:none;
-	position:relative;
-	}
-.navbar ul ul li a{
-	padding:20px;
-	color:white;
-	width:200px;
-	text-align:left;
-	
-	
-	}
-.navbar ul ul li a:hover{
-	background:lightblue;
-	color:black;
-	transition:0.9s;
-	}
-/*---------------------------------------footer-----------------------------------------*/
-	
+#button1{
+padding:20px;
+background-color:white;
+background-size:cover;
+font-size:12px;
+border-radius:10px;
+font-weight:bolder;
+transition:background-color 0.2s ease 0s;
+cursor:pointer;
+
+}
+#button1:hover{
+background-color:red;
+}
+/*-----------------------------footer----------------------------*/
+
 footer{
 width:100%;
 background-color:black;
-padding:20px 0px;
-}	
-	
+padding:60px 0px;
+}
 </style>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>	
+ <head>
+  <meta charset="utf-8:>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
 <body background="pic/ace.jpg">
 <br>
