--- a/airfare.html
+++ b/airfare.html
@@ -1,89 +1,52 @@
 <!DOCTYPE html>
+
 <html>
 
-<title>gracetravel&tourservices</title>
+	<body background="ace.jpg">
+	<head><title>gracetravel&tourservices</title>
+	</head>
+<head>
+</head>
 <style>
 body{
-	
-	background-image:url('pic/bab.jpg');
-	background-size:cover;
-	font-family:Century gothic;
-	font-size:12px;
-	margin: 0;
-	line-height:20px;
-	
-	
-	}
-.navbar{
-	text-align:center;
-	width:100%;
-	background:brown;
-	height:40px;
-	margin-top:70px;
-	opacity:0.7;
-	border-radius:0px;
-	}
-.navbar ul{
-	margin:70px;
-	padding:0;
-	list-style:none;
-	position:relative;
-	
-	}
-.navbar ul li a{
-	display:block;
-	padding:10px;
-	color:yellow;
-	text-decoration:none;
-	width:120px;
-	
-	}
-.navbar ul:after{
-	content:""; clear:both;
-	display:block;
-	
-	}
-.navbar ul li{
-	float:left;
-	list-style:none;
-	border-radius:14px;
-	}
-.navbar ul ul{
-	display:none;
-	}
-.navbar ul li:hover>ul{
-	display:block;
-	}
-.navbar ul li:hover{
-	background:green;
-	transition:0.9s;
-	}
-.navbar ul li:hover a{
-	color:white;
-	}
-.navbar ul ul{
-	background:black;
-	padding:0;
-	margin:0;
-	position:absolute;top:90%;
-	}
-.navbar ul ul li{
-	float:none;
-	position:relative;
-	}
-.navbar ul ul li a{
-	padding:20px;
-	color:white;
-	width:200px;
-	text-align:left;
-	
-	
-	}
-.navbar ul ul li a:hover{
-	background:lightblue;
-	color:black;
-	transition:0.9s;
-	}
+margin:0;
+background:url('pic/bab.jpg');
+background-size:cover;
+}
+.nav{
+width:100%;
+background:brown;
+height:44px;
+margin-top:70px;
+opacity:0.8;
+
+
+}
+li {
+float:right;
+margin-top:1px;
+}
+a{
+width:150px;
+color:white;
+display:block;
+text-decoration;none;
+font-size;20px;
+text-align:center;
+padding:10px;
+border-radius:10px;
+font-family:Century gothic;
+font-weight:bold;
+}
+a:hover{
+background:green;
+transition:0.6s;
+ul {
+list-style:none;
+padding:0;
+margin:0;
+position:absolute;
+}
 /*---------------------------------------footer-----------------------------------------*/
 	
 footer{
