--- a/airfare.html
+++ b/airfare.html
@@ -5,7 +5,7 @@
 <style>
 body{
 	
-	background-image:url('pic/bot.jpg');
+	background-image:url('pic/bab.jpg');
 	background-size:cover;
 	font-family:Century gothic;
 	font-size:12px;
@@ -203,9 +203,9 @@ padding:20px 0px;
 <p><h2>TERMS AND CONDITIONS:</p></h2>
 <p><font size="4">*Airfare is not included in the package.</p>
 <p><font size="4">*50% Down payment is required to secure the booking.</p>
-<p><font size="4">*Remaining balance should be settled 7 days prior to client’s arrival.</p>
+<p><font size="4">*Remaining balance should be settled 7 days prior to clientâ€™s arrival.</p>
 <p><font size="4">*Down payment is not refundable.</p>
-<p><font size="4">*Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
+<p><font size="4">*Any cancellation received within 7 days prior to the arrival date will occur the first nightâ€™s charge.</p>
 <p><font size="4">*Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">*If client failed to arrive on your booking date, NO REFUND will be given.</p>
 
