--- a/mywebsite9.html
+++ b/mywebsite9.html
@@ -99,7 +99,8 @@ padding:20px 0px;
 </head>	
 <center>
 <body>
-	
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
+	&nbsp;  <br>
 <div class ="navbar">
      
 <ul>
@@ -155,8 +156,7 @@ padding:20px 0px;
         <li><a href="https://graceairfare.github.io/vigan.html">VIGAN</a></li>
  </ul>
  </li>	   	
-  <img style="none;"src="pic/nnn.jpg" width="350px" height=40px" align="right"><br>
-	&nbsp;  <br>   
+     
 </ul>
 </div>
 
