--- a/airfare.html
+++ b/airfare.html
@@ -114,7 +114,7 @@ padding:20px 0px;
 <ul><p><h2><font style="border:2px double;">AIRFARE PROMO</font></p></h2>
 <p><font size="4">Date travel: March 9-12, 2018</p>
 <p><font size="4">-PAL Manila-PPS P1,953</p>
-<img style="border:5px double black;" src="AIR/pic/den.jpg" width=" 750px"height="500px"align="right">
+<img style="border:5px double black;" src="pic/den.jpg" width=" 750px"height="500px"align="right">
 <p><font size="4">-AIRASIA PPS-Manila P1,982</p>
 <p><font size="4">Promo period:Until seat last!</p>
 
