--- a/mywebsite15.html
+++ b/mywebsite15.html
@@ -194,14 +194,14 @@ width: 70%;
 
 	<div class="container">
 	<a href="https://graceairfare.github.io/union.html"><img style="border:5px double black;"src="pic/nio2.jpg" width=" 400px"height="300px"alt=""></a>
-        <a href="https://graceairfare.github.io/gigantes.html"target="_blank"><img style="border:5px double black;"src="pic/tes.jpg" width=" 340px"height="300px"alt=""></a>
-	<a href="https://graceairfare.github.io/konghong.html"target="_blank"><img style="border:5px double black;"src="pic/noh.jpg" width=" 340px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/gigantes.html"><img style="border:5px double black;"src="pic/tes.jpg" width=" 340px"height="300px"alt=""></a>
+	<a href="https://graceairfare.github.io/konghong.html"><img style="border:5px double black;"src="pic/noh.jpg" width=" 340px"height="300px"alt=""></a>
 	</div>
 	
 	<div class="container">
-	<a href="https://graceairfare.github.io/airfare.html"target="_blank"><img style="border:5px double black;"src="pic/den2.jpg" width=" 340px"height="300px"alt=""></a>
-        <a href="https://graceairfare.github.io/konghong1.html"target="_blank"><img style="border:5px double black;"src="pic/mar1.jpg" width=" 340px"height="300px"alt=""></a>
-        <a href="https://graceairfare.github.io/cebupac.html"target="_blank"><img style="border:5px double black;"src="pic/bec.jpg" width=" 340px"height="300px"alt=""></a>
+	<a href="https://graceairfare.github.io/airfare.html"><img style="border:5px double black;"src="pic/den2.jpg" width=" 340px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/konghong1.html"><img style="border:5px double black;"src="pic/mar1.jpg" width=" 340px"height="300px"alt=""></a>
+        <a href="https://graceairfare.github.io/cebupac.html"><img style="border:5px double black;"src="pic/bec.jpg" width=" 340px"height="300px"alt=""></a>
 	</div>
 	</div>
 </div>
